--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ coreschema==0.0.4
 cryptography==39.0.0
 defusedxml==0.7.1
 Django==4.1.5
+django-environ==0.9.0
 django-money==3.0.0
 django-phonenumber-field==7.0.2
 django-templated-mail==1.1.1
